# technopark_c_c_plus_plus

./: .gitignore  CMakeLists.txt  README.md  compiler.md  gdb-intro.md  valgrind.md
2017_2/examples/lecture3/: 000_dynamic_memory_allocation_in_initializer_list.cpp  002_namespaces.cpp  004_default_contructor.cpp  005_required_default_constructor_for_array.cpp  007_private_constructor.cpp  009_transform_constuctors_and_operations.cpp  010_initializer_list_vs_constructor_body.cpp  011_destructors.cpp  012_placement_new.cpp  013_simple_initializers_in_cpp11.cpp  014_move_constructor.cpp  017_defaults_constructors.cpp  018_trivial_constructors.cpp  019_delete_and_default_methods.cpp  020_RVO_NRVO.cpp  022_undefined_sizeof.cpp  025_contr_order.cpp  026_diamond_inheritance.cpp  027_RTTI.cpp  028_elimination.cpp  029_abstract_factory.cpp  031_bridge.cpp  032_command.cpp  034_visitor.cpp  CMakeLists.txt  Makefile
2017_2/examples/patterns/: 030_adapter.cpp  033_observer.cpp  CMakeLists.txt
2017_2/examples/stl/: 035_vector.cpp  036_vector_2.cpp  037_vector_3.cpp  038_bad_lru_cache.cpp  039_good_lru_cache.cpp  040_erase_remove.cpp  041_equality_equivalent.cpp  042_crtp_class.cpp  CMakeLists.txt
GCC_XML_diagn/: README.md
GCC_XML_diagn/examples/: README-en.md  README.md  header1.h  header2.h  include.c  include.i  indent.c  macro.c  output-clang.html  output-clang2.html  output-gcc.html  overload.cc  printf.c  simple.c  template.cc  test-clang.sh  test.f95  test.sh
abstact_factory/: CMakeLists.txt  factory.hpp  main.cpp
adapter/: CMakeLists.txt  main.cpp
boost.asio/: CMakeLists.txt  async.http.client.cpp  async.http.server.cpp  async.http.server.h  async.simple.server.cpp  connection.cpp  connection.h  request.h  response.h  router.h  sync.client.cpp
boost.beast/: CMakeLists.txt  async.http.client.cpp  async.http.server.cpp  async.http.server.h  connection.cpp  connection.h
boost_asio/: CMakeLists.txt
boost_asio/async_timer/: CMakeLists.txt  main.cpp
boost_asio/class_periodic_timer/: CMakeLists.txt  main.cpp
boost_asio/periodic_timer/: CMakeLists.txt  main.cpp
boost_asio/sync_timer/: CMakeLists.txt  main.cpp
boost_asio/synchronize_concurrent_handlers/: CMakeLists.txt  main.cpp
boost_interprocess/: CMakeLists.txt
boost_interprocess/allocate_many/: CMakeLists.txt  main.cpp
boost_interprocess/allocation_in_managed_memory_segment/: CMakeLists.txt  main.cpp
boost_interprocess/anonymous_condition_variable/: CMakeLists.txt  main.cpp  secondary.cpp  shared_data.hpp
boost_interprocess/anonymous_mutex/: CMakeLists.txt  main.cpp  secondary.cpp  shared_data.hpp
boost_interprocess/anonymous_semaphore/: CMakeLists.txt  main.cpp  secondary.cpp  shared_data.hpp
boost_interprocess/anonymous_shared_memory/: CMakeLists.txt  main.cpp
boost_interprocess/copy_on_write_and_read_only/: CMakeLists.txt  main.cpp
boost_interprocess/file_mapping/: CMakeLists.txt  main.cpp
boost_interprocess/managed_external_buffer/: CMakeLists.txt  main.cpp
boost_interprocess/managed_heap_memory/: CMakeLists.txt  main.cpp
boost_interprocess/maps_in_shared_memory/: CMakeLists.txt  main.cpp
boost_interprocess/message_queue/: CMakeLists.txt  main.cpp  secondary.cpp
boost_interprocess/named_mutex/: CMakeLists.txt  main.cpp
boost_interprocess/offset_ptr/: CMakeLists.txt  main.cpp
boost_interprocess/shared_memory/: CMakeLists.txt  main.cpp
boost_interprocess/shared_memory_object_capabilities/: CMakeLists.txt  main.cpp
boost_interprocess/vectors_in_shared_memory/: CMakeLists.txt  main.cpp
boost_process/: CMakeLists.txt
boost_process/async_io/: CMakeLists.txt  main.cpp
boost_process/environment/: CMakeLists.txt  main.cpp
boost_process/extensions/: CMakeLists.txt  main.cpp
boost_process/groups/: CMakeLists.txt  main.cpp
boost_process/introduction/: CMakeLists.txt  main.cpp
boost_process/start_process/: CMakeLists.txt  main.cpp
boost_process/sync_io/: CMakeLists.txt  main.cpp
boost_process/v2/: CMakeLists.txt  main.cpp
bridge/: CMakeLists.txt  main.cpp
builder/: CMakeLists.txt  main.cpp
client_connect_timeout/: client_timeouts.cpp
client_read_timeout/: client_timeouts.cpp
common/: socket.cpp  socket.hpp
composite/: composite  main.cpp
decorator/: CMakeLists.txt  decorator.cpp  decorator.h  main.cpp
drafts/: build.md
examples/c_homework/: team_projects.c  test_input
examples/lecture1/: 001_memory_classes.c  001_memory_classes_1.h  002_address_of_register_variable.c  005_dynamic_memory_management.c  006_aligned.c  009_arrays_as_function_arguments.c  011_c11_generics.c  013_insecure_count_limit.c  015_double_free.c  015_reading_to_static_buffer.c  017_double_prefix_operators.c  019_redundant_specifiers.c  020_matrix_mul.c
examples/lecture2/: 001_getopt.c  002_getopt_long.c  003_file_io.c  004_fork_basic.c  005_dead_stores.c  005_fork_bomb.c  006_simple_waitpid.c  007_exec.c  008_mmaped_file.c  009_mmap_shared_memory.c  010_pipe.c  011_popen.c  012_named_fifo_reader.c  012_named_fifo_writer.c  013_alarm.c  013_trylock_mutex_without_deadlock.c  014_messages_queue.c  019_c11_cas.c  021_semaphore.c  021_simple_cond_variables.c  (+6 more)
examples_gdb/: calc.cpp  calc_fixed.cpp  expr.txt
examples_valgrind/: CMakeLists.txt  leak.c  oob_access.c  static.c  uninit_read.c  use_after_free.c
facade/: CMakeLists.txt  file_transfer.cpp  file_transfer.h  main.cpp
factory_method_pattern/: CMakeLists.txt  ReadMe.md  client.hpp  httpclient.hpp  main.cpp  shape.h
http_client/: http_client.cpp
iterator/: main.cpp
libevent/: CMakeLists.txt  http.client.cpp  main.cpp
mediator/: main.cpp
multiplexing/: multiplex  multiplex.cpp
observe/: CMakeLists.txt  main.cpp
simple_factory/: CMakeLists.txt  client.h  main.cpp  otherclient.h
simple_server/: simple_server.cpp
simplest_client_server/: client.cpp  server.cpp  server_fork.cpp  server_poll.cpp  server_select.cpp
state/: CMakeLists.txt  main.cpp
template-method/: CMakeLists.txt  main.cpp
wt/: CMakeLists.txt  http.client.cpp  httpserver.css  main.cpp  postprocessor.h  simple.http.client.cpp
(+41 files in other folders)
