cmake_minimum_required(VERSION 3.10)

project(boost_interprocess)

add_subdirectory(allocate_many)
add_subdirectory(allocation_in_managed_memory_segment)
add_subdirectory(anonymous_condition_variable)
add_subdirectory(anonymous_mutex)
add_subdirectory(anonymous_semaphore)
add_subdirectory(anonymous_shared_memory)
add_subdirectory(copy_on_write_and_read_only)
add_subdirectory(file_mapping)
add_subdirectory(managed_external_buffer)
add_subdirectory(managed_heap_memory)
add_subdirectory(maps_in_shared_memory)
add_subdirectory(message_queue)
add_subdirectory(named_mutex)
add_subdirectory(offset_ptr)
add_subdirectory(shared_memory)
add_subdirectory(shared_memory_object_capabilities)
add_subdirectory(vectors_in_shared_memory)
